--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-langchain-openai==0.0.1
-
-langchain-pinecone==0.0.1
-streamlit==1.11.0
-pinecone-client==2.2.1
-python-dotenv==0.21.0
+langchain-openai
+langchain-pinecone
+streamlit
+pinecone-client
+python-dotenv
